[tool.poetry]
name = "gptravel"
version = "0.1.0"
description = "Project for travel plan creation using GPT model"
authors = ["Stefano Polo <sp.stefano.polo@gmail.com>, Roberto Corti <robertocorti.job@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.2.3"
pycountry = "^22.3.5"
wikipedia-api = "^0.5.8"
geopy = "^2.3.0"
poetry-dotenv-plugin = "^0.1.0"
openai = "^0.27.2"
python-dotenv = "^1.0.0"
regex = "^2022.10.31"
requests = "^2.28.2"
numpy = "^1.24.2"
python-tsp = "^0.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.17.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-coverage = "^0.0"
types-requests = "^2.28.11.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
